Add Jenkins 2.263.1 compatibility branch
- Parent POM 4.88 -> 4.40
- BOM bom-2.462.x -> bom-2.263.x:984.vb5eaac999a7e
- Java level 17 -> 8
- Replace List.of() with Collections.emptyList()
- Replace String.isBlank() with String.trim().isEmpty()
- Replace var with explicit types
- Use com.gargoylesoftware.htmlunit.Page instead of org.htmlunit.Page